# election

./: .gitreview  .readthedocs.yaml  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
candidates/2019/TC/: alexander.hughes@pm.me  aodinokov@mirantis.com  bluejay.ahn@gmail.com  jan-erik.mangs@ericsson.com  jgu@suse.com  placeholder_and_hints.rst  rv6848@att.com
candidates/2019/WC/: andrew.walters@att.com  anil.maheshwari@ericsson.com  igarcia@suse.com  jean-philippe@evrard.me  kaspars.skels@ericsson.com  matt.mceuen@att.com  nishant.e.kumar@ericsson.com  placeholder_and_hints.rst  roman.gorshunov@att.com  segorov@mirantis.com
candidates/2019/special-elections/TC/: al7689@att.com  placeholder_and_hints.rst
candidates/2019/special-elections/WC/: pittwoodian@gmail.com
candidates/2019_H1/tsc/: dtroyer@gmail.com  ian.jolliffe@windriver.com  placeholder_and_hints.rst  sxmatch1986@gmail.com
candidates/2020/TC/: alex.bailey.1@att.com.txt  alexander.hughes@pm.me  aodinokov@mirantis.com  j.t.williams@dell.com.txt  jan-erik.mangs@ericsson.com  roman.gorshunov@att.com
candidates/2020/WC/: andrew.walters@att.com  james.gu@comcast.net  kkalynovskyi@mirantis.com  matt.mceuen@att.com  placeholder_and_hints.rst  sreejith.p@ericsson.com
candidates/2021/TC/: alexbailey@microsoft.com  aodinokov@mirantis.com  drewwalters@microsoft.com  jan-erik.mangs@ericsson.com  mmceuen@microsoft.com  placeholder_and_hints.rst  raliev@mirantis.com
doc/: requirements.txt
doc/source/: conf.py  index.rst  procedures.rst  upcoming.rst
doc/source/results/: index.rst
(+6 files in other folders)
