[metadata]
name = starlingx-election
summary = StarlingX Election Documents
description-file = README.rst
author = StarlingX Election Officials
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.starlingx.io/election/
classifier =
    Environment :: StarlingX
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html

[pbr]
warnerrors = True
