[metadata]
name = airship-election
summary = Airship Election Documents
description-file = README.rst
author = Airship Election Officials
author-email = airship-discuss@lists.openstack.org
home-page = https://opendev.org/airship/election/
classifier =
    Environment :: Airship
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html

[pbr]
warnerrors = True
